--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -5,11 +5,12 @@
     <title>OPENRNDR</title>
     <style>
         body, html {
-            margin: 0 0 0 0;
+            margin: 0;
             width: 100%;
             height: 100%;
         }
         #openrndr-canvas {
+            display: block;
             width: 100%;
             height: 100%;
         }
@@ -17,6 +18,6 @@
 </head>
 <body>
 <canvas id="openrndr-canvas"></canvas>
-<script src="openrndr-js-template.js"></script>
+<script src="openrndr-program.js"></script>
 </body>
 </html>
