--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>OPENRNDR</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <style>
         body, html {
             margin: 0;
             width: 100%;
             height: 100%;
-            overflow: hidden !important;
-            overscroll-behavior: none !important;
+            overflow: hidden;
         }
         #openrndr-canvas {
             display: block;
